{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 72,
  "lineage": "69ac9dde-e896-32b0-5f85-0db4dd02c285",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Wayfarer_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05be7ee36d857cb61",
            "association_id": "eipassoc-077a2bb5b564145cd",
            "domain": "vpc",
            "id": "eipalloc-05be7ee36d857cb61",
            "instance": "i-0783fd7e9a94783de",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a3506f2b98eb3087",
            "private_dns": "ip-10-0-1-120.ec2.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-3-217-34-88.compute-1.amazonaws.com",
            "public_ip": "3.217.34.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Wayfarer_web_eip_0"
            },
            "tags_all": {
              "Name": "Wayfarer_web_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Wayfarer_web",
            "aws_key_pair.Wayfarer_kp",
            "aws_security_group.wayfarer_web_sg",
            "aws_subnet.Wayfarer_public_subnet",
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Wayfarer_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:101049029244:instance/i-0783fd7e9a94783de",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0783fd7e9a94783de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Wayfarer_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3506f2b98eb3087",
            "private_dns": "ip-10-0-1-120.ec2.internal",
            "private_ip": "10.0.1.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026e1a061fe196938",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ef0f4de263bb202",
            "tags": {
              "Name": "Wayfarer_web_0"
            },
            "tags_all": {
              "Name": "Wayfarer_web_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cb41736e69c17af8"
            ]
          },
          "dependencies": [
            "aws_key_pair.Wayfarer_kp",
            "aws_security_group.wayfarer_web_sg",
            "aws_subnet.Wayfarer_public_subnet",
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example_with_data_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:101049029244:instance/i-03d9854cf873fa078",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d9854cf873fa078",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050ff11b1e71fc27a",
            "private_dns": "ip-172-31-33-200.ec2.internal",
            "private_ip": "172.31.33.200",
            "public_dns": "ec2-35-173-195-150.compute-1.amazonaws.com",
            "public_ip": "35.173.195.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06f404db2e8d66e46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4b438814c6a2ba5",
            "tags": {
              "Name": "Terraform EC2"
            },
            "tags_all": {
              "Name": "Terraform EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09842cc2161b385b8"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Wayfarer_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:internet-gateway/igw-06bad244cd3c33946",
            "id": "igw-06bad244cd3c33946",
            "owner_id": "101049029244",
            "tags": {
              "Name": "Wayfarer_igw"
            },
            "tags_all": {
              "Name": "Wayfarer_igw"
            },
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "dependencies": [
            "aws_vpc.Wayfarer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Wayfarer_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:route-table/rtb-01bb276418c8eacd9",
            "id": "rtb-01bb276418c8eacd9",
            "owner_id": "101049029244",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Wayfarer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Wayfarer_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:route-table/rtb-00c4e67655d092d86",
            "id": "rtb-00c4e67655d092d86",
            "owner_id": "101049029244",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bad244cd3c33946",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Wayfarer_igw",
            "aws_vpc.Wayfarer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039edb98c9de75c41",
            "route_table_id": "rtb-01bb276418c8eacd9",
            "subnet_id": "subnet-04cbe53b56fe9b2e3"
          },
          "dependencies": [
            "aws_route_table.Wayfarer_private_rt",
            "aws_subnet.Wayfarer_private_subnet",
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0794362f4fafd0eb2",
            "route_table_id": "rtb-01bb276418c8eacd9",
            "subnet_id": "subnet-00f69dcc0a5fd63af"
          },
          "dependencies": [
            "aws_route_table.Wayfarer_private_rt",
            "aws_subnet.Wayfarer_private_subnet",
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05311969152da4248",
            "route_table_id": "rtb-00c4e67655d092d86",
            "subnet_id": "subnet-04ef0f4de263bb202"
          },
          "dependencies": [
            "aws_internet_gateway.Wayfarer_igw",
            "aws_route_table.Wayfarer_public_rt",
            "aws_subnet.Wayfarer_public_subnet",
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Wayfarer_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:security-group/sg-0ba6f1f7af81ea58c",
            "description": "Security group for Wayfarer databases",
            "egress": [],
            "id": "sg-0ba6f1f7af81ea58c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cb41736e69c17af8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Wayfarer_db_sg",
            "name_prefix": "",
            "owner_id": "101049029244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wayfarer_db_sg"
            },
            "tags_all": {
              "Name": "wayfarer_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wayfarer_web_sg",
            "aws_vpc.Wayfarer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wayfarer_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:security-group/sg-0cb41736e69c17af8",
            "description": "Security group for wayfarer web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb41736e69c17af8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wayfarer_web_sg",
            "name_prefix": "",
            "owner_id": "101049029244",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wayfarer_web_sg"
            },
            "tags_all": {
              "Name": "Wayfarer_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Wayfarer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Wayfarer_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:subnet/subnet-04cbe53b56fe9b2e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cbe53b56fe9b2e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101049029244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wayfarer_private_subnet_0"
            },
            "tags_all": {
              "Name": "Wayfarer_private_subnet_0"
            },
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "dependencies": [
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:subnet/subnet-00f69dcc0a5fd63af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f69dcc0a5fd63af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101049029244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wayfarer_private_subnet_1"
            },
            "tags_all": {
              "Name": "Wayfarer_private_subnet_1"
            },
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "dependencies": [
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Wayfarer_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:subnet/subnet-04ef0f4de263bb202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ef0f4de263bb202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "101049029244",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wayfarer_public_subnet_0"
            },
            "tags_all": {
              "Name": "Wayfarer_public_subnet_0"
            },
            "vpc_id": "vpc-0ce1e3c8d0394637a"
          },
          "dependencies": [
            "aws_vpc.Wayfarer_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Wayfarer_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:101049029244:vpc/vpc-0ce1e3c8d0394637a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e0fc3f2dbc7e945",
            "default_route_table_id": "rtb-05e967dfe95a185dc",
            "default_security_group_id": "sg-0dbbd9503fc8335db",
            "dhcp_options_id": "dopt-0fe3031d8406f83ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ce1e3c8d0394637a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e967dfe95a185dc",
            "owner_id": "101049029244",
            "tags": {
              "Name": "Wayfarer_vpc"
            },
            "tags_all": {
              "Name": "Wayfarer_vpc"
            }
          }
        }
      ]
    }
  ]
}